[package]
authors = ["TPT"]
name = "mm_api_notify"
version = "0.1.1"

[dependencies]
app_dirs = "1.1.1"
bson = "0.7.0"
chrono = "0.2.25"
clap = "2.24.1"
fern = "0.4.0"
log = "0.3.7"
mm_client = "0.9.0"
mockito = "0.3.0"
mongodb = "0.2.8"
rayon = "0.7.0"
reqwest = "0.6.1"
serde = "1.0.5"
serde_derive = "1.0.5"
serde_json = "1.0.2"
toml = "0.4.1"
