[package]
authors = ["TPT"]
name = "mm_api_notify"
version = "0.3.0"

[dependencies]
app_dirs = "1.2.1"
bson = "0.11.0"
chrono = "0.4.0"
clap = "2.24.1"
fern = "0.4.0"
log = "0.3.7"
mm_client = "0.10.0"
mockito = "0.8.2"
mongo_driver = "0.12.0"
rayon = "0.7.0"
reqwest = "0.8.2"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
toml = "0.4.1"
