[package]
authors = ["TPT"]
edition = "2018"
name = "mm_api_notify"
version = "0.3.0"

[dependencies]
app_dirs = "1.2.1"
bson = "1.1.0"
chrono = "0.4.19"
clap = "2.33.3"
fern = "0.6.0"
log = "0.4.11"
mm_client = "0.12.0"
mockito = "0.28.0"
mongo_driver = "0.12.1"
rayon = "1.5.0"
reqwest = "0.10.9"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
toml = "0.5.7"
